--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
   <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/mobileres.css">
   <link rel="stylesheet" href="./mobres.css">
+  <link rel="stylesheet" href="./styles/">
 </head>
-mainContainer
+
 <body>
 
 
   <!-- this is navbar -->
 
-  <div class="mainContainer">
+  <div class="main_container">
 
     
   <nav>
@@ -171,7 +172,7 @@ mainContainer
         <div class="loadmore">
           <button class="load_more_button">LOAD MORE</button>
         </div>
-      </div>
+     
     </section>
 
     <!-- this is contact section -->
@@ -238,7 +239,7 @@ mainContainer
   </footer>
 
 
-  </div>
+</div>
 
 
 
